# kguardian

./: .gitignore  .release-please-manifest.json  .versionrc.json  AGENTS.md  AI-MCP-INTEGRATION-GOAL.md  CLAUDE.md  CONTRIBUTING.md  FUTURE_ENHANCEMENTS.md  LICENSE  README.md  RELEASES.md  SECURITY.md  STYLE.md  Taskfile.yaml  Tiltfile  UI_DEPLOYMENT_SUMMARY.md  index.yaml  release-please-config.json  tilt-settings.yaml.example  wrangler.jsonc
.github/: RELEASE_GUIDE.md  ct.yaml  renovate.json5
.github/renovate/: autoMerge.json5
.github/workflows/: advisor-image-release.yaml  advisor-release.yml  advisor-test.yaml  auto-merge.yaml  broker-release.yaml  charts-docs.yaml  charts-lint.yaml  charts-release.yaml  controller-release.yaml  evaluator-release.yaml  frontend-release.yaml  llm-bridge-release.yaml  mcp-server-release.yaml  pr-build.yaml  release-please.yaml  renovate-automerge.yaml  renovate.yaml  security-scan.yaml  ui-release.yaml
.slsa-goreleaser/advisor/: darwin-amd64.yml  darwin-arm64.yml  linux-amd64.yml  linux-arm64.yml
.taskfiles/Broker/: Taskfile.yaml
.taskfiles/Controller/: Taskfile.yaml
.taskfiles/UI/: Taskfile.yaml
advisor/: CHANGELOG.md  Dockerfile  go.mod  go.sum  main.go
advisor/advisor/: CHANGELOG.md
advisor/cmd/: audit.go  audit_cluster.go  audit_cluster_test.go  audit_test.go  networkpolicy.go  networkpolicy_test.go  root.go  seccomp.go  serve.go  serve_test.go  version.go  version_test.go
blog/: kguardian.md
broker/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
broker/broker/: CHANGELOG.md
broker/db/migrations/2023-06-06-070736_pod_traffic/: up.sql
broker/db/migrations/2025-11-11-085418_add_pod_identity/: down.sql  up.sql
broker/db/migrations/2025-11-29-091312-0000_add_workload_selector_labels/: down.sql  up.sql
broker/db/migrations/2026-04-13-000000_add_performance_indexes/: down.sql  up.sql
broker/db/migrations/2026-05-07-100000_audit_verdicts/: down.sql  up.sql
broker/db/migrations/2026-05-08-100000_audit_verdict_column/: down.sql  up.sql
broker/db/migrations/2026-05-11-120000_audit_verdicts_policy_name_index/: down.sql  up.sql
broker/db/migrations/2026-06-01-000000_pod_traffic_query_indexes/: down.sql  up.sql
broker/db/migrations/2026-06-25-000000_pod_http_traffic_unique_index/: down.sql  up.sql
broker/db/migrations/2026-07-06-120000_pod_traffic_timestamp_index/: down.sql  up.sql
broker/db/migrations/2026-07-19-120000_install_info/: down.sql  up.sql
broker/src/: add.rs  audit.rs  auth.rs  conn.rs  error.rs  get.rs  lib.rs  main.rs  retention.rs  schema.rs  telemetry.rs  types.rs  version_check.rs
charts/kguardian/: CHANGELOG.md  Chart.yaml  README.md  README.md.gotmpl  UPGRADING.md  values.yaml
cloudflare/version-service/: README.md  wrangler.toml
controller/: CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  build.rs
controller/controller/: CHANGELOG.md
controller/netpol/: l7_egress_http.yaml  l7_ingress_egres_grpc.yaml  l7_ingress_http.yaml
controller/src/: bpf.rs  client.rs  container.rs  error.rs  http.rs  lib.rs  log.rs  main.rs  models.rs  netpolicy_drop.rs  network.rs  pkt_drop.rs  pod_reconciler.rs  pod_watcher.rs  service_watcher.rs  syscall.rs
controller/src/bpf/: helper.h  http.bpf.c  http.skel.rs  http_bck.bpf.c  http_probe.skel.rs  netpolicy_drop.bpf.c  netpolicy_drop.skel.rs  network_probe.bpf.c  network_probe.skel.rs  packet_drop.bpf.c  packet_drop.skel.rs  syscall.bpf.c  syscall.skel.rs
dev/: controller.Dockerfile  tilt-values.yaml
docs/: README.md  architecture.mdx  docs.json  index.mdx  installation.mdx  quickstart.mdx  telemetry.mdx
docs/advanced/: troubleshooting.mdx
docs/api-reference/: introduction.mdx
docs/cli/: gen-networkpolicy.mdx  gen-seccomp.mdx  overview.mdx
docs/concepts/: audit-network-policy.mdx  ebpf-monitoring.mdx  network-policies.mdx  overview.mdx  seccomp-profiles.mdx
docs/policy-gallery/: go-microservice.mdx  (+6 more)
evaluator/: .dockerignore  CHANGELOG.md  Dockerfile  go.mod  go.sum  main.go  main_test.go
frontend/: .dockerignore  .env.example  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  TESTING.md  docker-entrypoint.sh  index.html  package-lock.json  package.json  vite.config.ts
llm-bridge/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json
mcp-server/: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  KMCP_MIGRATION.md  README.md  go.mod  go.sum  kmcp.yaml  main.go  package-lock.json  package.json
scripts/: quick-install.sh
tests/: invariant_anthropic.test.ts
ui/: .env.example  ARCHITECTURE.md  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
(+208 files in other folders)
