[package]
name = "broker"
version = "1.6.1"  #:version
authors = ["Mahesh Rayas"]
description = """
API server for kguardian - stores telemetry data from eBPF controller
"""
documentation = "https://github.com/kguardian-dev/kguardian"
homepage = "https://github.com/kguardian-dev/kguardian"
repository = "https://github.com/kguardian-dev/kguardian"
readme = "README.md"
keywords = ["kubernetes", "k8s"]
license = "BUSL-1.1"
edition = "2021"

[[bin]]
name = "broker"
path = "src/main.rs"

[lib]
name = "api"
path = "src/lib.rs"
bench = false

[dependencies]
dotenv = "0.15"
actix-web = "4.11"
actix-cors = "0.7"
diesel = { version = "2.3.6", features = ["postgres","chrono","serde_json","r2d2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
thiserror = "2.0.18"
tracing = {version = "0.1.44", features = ['log']}
chrono = { version = "0.4.43", features = ["serde"] }
diesel_migrations = "2.1.0"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }