[package]
name = "kguardian"
version = "1.8.0"
license = "BUSL-1.1"
edition = "2021"

[build-dependencies]
libbpf-cargo = "0.26.0"
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "db131a55c624fbe1da97de90ac08e9cec9e8ed49" }

[dependencies]
anyhow = "1.0.102"
libbpf-rs = "0.26.0"
libbpf-sys = "1.6.3"
plain = "0.2"
time = { version = "0.3.47", features = ["formatting", "local-offset", "macros"]}
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs", "time"] }
kube = { version = "3.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["latest"] }
futures = "0.3.32"
thiserror = "2.0.18"
tracing = "0.1.44"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter", "local-time"] }
containerd-client = "0.8.0"
regex = "1.12.3"
procfs = "0.18.0"
reqwest = { version = "0.13.2", features = ["json"] }
uuid = { version = "1.21.0", features = ["v4"]}
chrono = { version = "0.4.43", features = ["serde"] }
openssl = { version = "0.10.73", features = ["vendored"] }
lazy_static = "1.5.0"
libseccomp = "0.4"
moka = { version = "0.12.13", features = ["future"]}
dashmap = "6.1"
rustls = { version = "0.23", features = ["ring"] } 